Fix overflow

--- a/main.css
+++ b/main.css
@@ -8,7 +8,7 @@ body {
     Padding: 0;
     Font-family: Serif;
     background-color: #404040;
-    overflow: hidden;
+
 }
 
 @font-face {
